--- a/rules/azure.yaml
+++ b/rules/azure.yaml
@@ -36,7 +36,7 @@ rules:
     pattern: |
       (?x)
         \b
-          (?i:(?:\w*azure\w*openai\w*))
+          (?i:(?:\w*AZURE\w*OPENAI\w*))
           [\W]{0,10}?
           ((?i:[A-Z0-9]{84}))
         \b
