--- a/rules/stripe.yaml
+++ b/rules/stripe.yaml
@@ -8,7 +8,7 @@ rules:
     pattern: |
       (?x)
         \b
-          ((?:sk|rk)_live_(?i)[A-Z0-9]{24})
+          ([sr]k_live_(?i)[A-Z0-9]{24})
         \b
     entropy: 4.1
     redact: [11, 4]
@@ -33,7 +33,7 @@ rules:
     pattern: |
       (?x)
         \b
-          ((?:sk|rk)_live_[a-zA-Z0-9]{25,250})
+          ([sr]k_live_[a-zA-Z0-9]{25,250})
         \b
     entropy: 5.1
     redact: [11, 4]
