--- a/rules/cohere.yaml
+++ b/rules/cohere.yaml
@@ -21,6 +21,9 @@ rules:
         - 'cohere = fVst85KDGHJxfjrXtSJGjwQ27W92ORERq4bV6Ais'
         - 'let cohere = "s8Cuh6T6Tz4ZP5Xg7HTxsX0JZY3J92KGX0p1yt47"'
         - 'export COHERE_KEY="s8Cuh6T6Tz4ZP5Xg7HTxsX0JZY3J92KGX0p1yt47"'
+        - 'CO_API_KEY=w9piJHtWe0p01rRO420M6PTJmCTerjuHOH0wZsgB'
+        - 'const CO_API_KEY = "szJiK1fy6FaEedPWSw8e41kAXTbtArCX5ks7wQP3"'
+        - 'CO_API_KEY=fVst85KDGHJxfjrXtSJGjwQ27W92ORERq4bV6Ais'
       assert_not:
         - 9MbXxamGfTkx2cfasR7oUUzylk14gqTAK9GMlSDuX
         - 9MbXxamGfTkx2cfasR7oUUzylk14gqTAK9GMlSD
