--- a/pkg/rules/mysql.yaml
+++ b/pkg/rules/mysql.yaml
@@ -9,7 +9,7 @@ rules:
       (?x)
         \b
           (
-            (?i)mysql://\w*:[A-Z0-9-_+=]*@\w*[:]?[\d]{0,5}[/]?\w*
+            (?i)(?:mysql|mysqldb)://[^\s:@]+:[^\s@]+@[^:\s]+[:]?\d{0,5}(?:/[^\s"]+)?
           )
         \b
     entropy: 4.1
