--- a/pkg/rules/postgres.yaml
+++ b/pkg/rules/postgres.yaml
@@ -10,7 +10,7 @@ rules:
       (?x)
         \b
           (
-            (?i)(?:postgres|postgis|postgresql)://\w*:[A-Z0-9-_+=]*@\w*[:]?[\d]{0,5}[/]?\w*
+            (?i)(?:postgres|postgis|postgresql)://[^\s:@]+:[^\s@]+@[^:\s]+[:]?\d{0,5}(?:/[^\s"]+)?
           )
         \b
     entropy: 4.1
