--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
             cmake \
             ragel \
             pkg-config \
+            libboost-dev \
             libsqlite3-dev \
             libpcap-dev
 
