--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,7 +78,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: macos-13
+          - os: macos-15-intel
             goarch: amd64
           - os: macos-latest
             goarch: arm64
@@ -103,6 +103,7 @@ jobs:
       - name: Build poltergeist
         run: |
           export CGO_ENABLED=1
+          export PKG_CONFIG_PATH="$(pwd)/build/vectorscan/darwin_${{ matrix.goarch }}/lib/pkgconfig"
           export CGO_CFLAGS="-I$(pwd)/build/vectorscan/darwin_${{ matrix.goarch }}/include"
           export CGO_LDFLAGS="-L$(pwd)/build/vectorscan/darwin_${{ matrix.goarch }}/lib -lhs -lc++"
 
