--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
   push:
     tags:
       - 'v*'
+  pull_request:
+    branches:
+      - main
 
 permissions:
   contents: write
@@ -35,6 +38,7 @@ jobs:
             cmake \
             ragel \
             pkg-config \
+            libboost-dev \
             libsqlite3-dev \
             libpcap-dev
 
@@ -44,11 +48,17 @@ jobs:
       - name: Build poltergeist
         run: |
           export CGO_ENABLED=1
+          export PKG_CONFIG_PATH="$(pwd)/build/vectorscan/linux_amd64/lib/pkgconfig"
           export CGO_CFLAGS="-I$(pwd)/build/vectorscan/linux_amd64/include"
           export CGO_LDFLAGS="-L$(pwd)/build/vectorscan/linux_amd64/lib -lhs -lstdc++ -lm"
 
+          VERSION="${{ github.ref_name }}"
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            VERSION="dev-$(git rev-parse --short HEAD)"
+          fi
+
           go build -a \
-            -ldflags "-s -w -X main.version=${{ github.ref_name }} -linkmode external -extldflags '-static'" \
+            -ldflags "-s -w -X main.version=$VERSION -linkmode external -extldflags '-static'" \
             -o poltergeist \
             ./cmd/poltergeist
 
@@ -69,7 +79,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: macos-13
+          - os: macos-15-intel
             goarch: amd64
           - os: macos-latest
             goarch: arm64
@@ -94,11 +104,17 @@ jobs:
       - name: Build poltergeist
         run: |
           export CGO_ENABLED=1
+          export PKG_CONFIG_PATH="$(pwd)/build/vectorscan/darwin_${{ matrix.goarch }}/lib/pkgconfig"
           export CGO_CFLAGS="-I$(pwd)/build/vectorscan/darwin_${{ matrix.goarch }}/include"
           export CGO_LDFLAGS="-L$(pwd)/build/vectorscan/darwin_${{ matrix.goarch }}/lib -lhs -lc++"
 
+          VERSION="${{ github.ref_name }}"
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            VERSION="dev-$(git rev-parse --short HEAD)"
+          fi
+
           go build \
-            -ldflags "-s -w -X main.version=${{ github.ref_name }}" \
+            -ldflags "-s -w -X main.version=$VERSION" \
             -o poltergeist \
             ./cmd/poltergeist
 
@@ -117,6 +133,7 @@ jobs:
   create-release:
     needs: [build-linux, build-macos]
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Checkout
         uses: actions/checkout@v4
