--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -178,6 +178,8 @@ jobs:
         run: |
           vcpkg install boost-graph:x64-windows-static `
             boost-dynamic-bitset:x64-windows-static `
+            boost-multi-array:x64-windows-static `
+            boost-icl:x64-windows-static `
             boost-system:x64-windows-static `
             boost-filesystem:x64-windows-static `
             boost-thread:x64-windows-static `
