--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -80,15 +80,18 @@ builds:
         goarch: amd64
         env:
           - CGO_ENABLED=1
-          - CGO_CFLAGS=-I{{.Env.PWD}}/build/hyperscan/windows_amd64/include
-          - CGO_LDFLAGS=-L{{.Env.PWD}}/build/hyperscan/windows_amd64/lib -lhs
+          - CGO_CFLAGS=-I{{.Env.PWD}}/build/vectorscan/windows_amd64/include
+          - CGO_LDFLAGS=-L{{.Env.PWD}}/build/vectorscan/windows_amd64/lib -lhs -lstdc++
         ldflags:
           - -s -w
           - -X main.version={{.Version}}
 
 archives:
   - id: default
-    formats: ['tar.gz']
+    format: tar.gz
+    format_overrides:
+      - goos: windows
+        format: zip
     name_template: >-
       {{ .ProjectName }}_
       {{- .Os }}_
